testData/src/error/java/ExampleController2.java
package src.error.java;

/**
 * Created by 吴昊 on 2019/12/20.
 */
@org.springframework.web.bind.annotation.Controller
public class ExampleController {
}
